reworked on the flickering issue

--- a/src/app.css
+++ b/src/app.css
@@ -39,5 +39,5 @@ html {
 }
 
 .animate-fade-in {
-    animation: fade-in 1s ease-out;
+    animation: fade-in 1s ease-out forwards;
 }
